fixed containers on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -131,6 +131,14 @@ textarea {
   background-color: #bbb;
 }
 
+@media (min-width: 1000px)and (max-height: 800px) {
+  .page-container {
+    max-width: 650px;
+    height: 450px;
+    overflow-y: scroll;
+    overflow-x: none;
+  }
+}
 
 @media (max-width: 1250px) {
   .page-container {
